// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details test suite Test Redux item should render Redux action properly 1`] = `
<Component
  style={
    Object {
      "height": "100%",
      "left": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
    }
  }
>
  <Header
    style={
      Array [
        Object {
          "elevation": 0,
          "shadowOffset": Object {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
        },
        Object {
          "backgroundColor": "#111827",
        },
      ]
    }
  >
    <ForwardRef
      onPress={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderLeftWidth": 1,
            "height": 56,
            "justifyContent": "center",
            "width": 56,
          },
          Object {
            "borderLeftWidth": 0,
          },
        ]
      }
      testID="buttonBackToMainScreen"
    >
      <Icon
        color="#F9FAFB"
        name="arrow-left"
        size={24}
      />
    </ForwardRef>
    <Content
      color="#06B6D4"
      title="Netwatch"
      titleStyle={
        Object {
          "fontSize": 18,
        }
      }
    />
    <ForwardRef
      onPress={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderLeftWidth": 1,
            "height": 56,
            "justifyContent": "center",
            "width": 56,
          },
          Object {
            "borderLeftWidth": 0,
          },
        ]
      }
      testID="buttonShare"
    >
      <Icon
        color="#F9FAFB"
        name="download"
        size={24}
      />
    </ForwardRef>
  </Header>
  <Component
    contentContainerStyle={
      Object {
        "paddingBottom": 20,
        "paddingTop": 26,
      }
    }
    style={
      Object {
        "backgroundColor": "#1F2937",
      }
    }
  >
    <Component
      style={
        Object {
          "flex": 1,
          "width": "100%",
        }
      }
    >
      <Component
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 10,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <Title
          style={
            Array [
              Object {
                "marginRight": 6,
              },
              Object {
                "color": "#F9FAFB",
              },
            ]
          }
        >
          REDUX
        </Title>
        <Component
          style={
            Array [
              Object {
                "borderRadius": 4,
                "fontSize": 12,
                "height": 22,
                "justifyContent": "center",
                "width": 30,
              },
              Object {
                "backgroundColor": "#764ABC",
              },
              Object {
                "paddingHorizontal": 8,
              },
            ]
          }
          testID="statusCodeColor"
        >
          <Icon
            color="#F9FAFB"
            name="redux"
            size={12}
          />
        </Component>
      </Component>
      <Component
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 10,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#6B7280",
            }
          }
        >
          Started at : 
        </Text>
        <Text>
          01/01/1970 - 00:00:00
        </Text>
      </Component>
      <Subheading
        style={
          Array [
            Object {
              "marginBottom": 10,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            Object {
              "backgroundColor": "#374151",
              "color": "#F9FAFB",
            },
          ]
        }
      >
        Content
      </Subheading>
      <Component
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 10,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#6B7280",
            }
          }
        >
          Type
        </Text>
      </Component>
      <Component
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 10,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <Text>
          __ERROR:UNDEFINED__
        </Text>
      </Component>
      <Component
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 10,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#6B7280",
            }
          }
        >
          Payload :
        </Text>
      </Component>
      <Component
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 10,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <Component
          style={
            Array [
              Object {
                "justifyContent": "flex-start",
                "paddingHorizontal": 16,
                "paddingVertical": 8,
              },
              Object {
                "flex": 1,
                "paddingHorizontal": 0,
              },
            ]
          }
        >
          <Text>
            "{\\"data\\":\\"This is a test with a long payload, more than 100\\",\\"next\\":\\"characters to check if t...
          </Text>
          <Component
            style={
              Object {
                "alignItems": "flex-end",
              }
            }
          >
            <ForwardRef
              onPress={[Function]}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "borderLeftWidth": 0,
                    "flexDirection": "row",
                  },
                ]
              }
              testID="buttonViewMore"
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#06B6D4",
                      "marginRight": 6,
                    },
                  ]
                }
              >
                View more
              </Text>
              <Icon
                allowFontScaling={false}
                color="#06B6D4"
                name="more"
                size={14}
                style={
                  Object {
                    "transform": Array [
                      Object {
                        "rotateY": "180deg",
                      },
                    ],
                  }
                }
              />
            </ForwardRef>
          </Component>
        </Component>
      </Component>
    </Component>
  </Component>
  <Snackbar
    duration={3000}
    onDismiss={[Function]}
    style={
      Object {
        "backgroundColor": "#F9FAFB",
      }
    }
    theme={
      Object {
        "colors": Object {
          "surface": "#6B7280",
        },
      }
    }
    visible={false}
  />
</Component>
`;

exports[`Details test suite Test Request item should render Request properly 1`] = `
<Component
  style={
    Object {
      "height": "100%",
      "left": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
    }
  }
>
  <Header
    style={
      Array [
        Object {
          "elevation": 0,
          "shadowOffset": Object {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
        },
        Object {
          "backgroundColor": "#111827",
        },
      ]
    }
  >
    <ForwardRef
      onPress={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderLeftWidth": 1,
            "height": 56,
            "justifyContent": "center",
            "width": 56,
          },
          Object {
            "borderLeftWidth": 0,
          },
        ]
      }
      testID="buttonBackToMainScreen"
    >
      <Icon
        color="#F9FAFB"
        name="arrow-left"
        size={24}
      />
    </ForwardRef>
    <Content
      color="#06B6D4"
      title="Netwatch"
      titleStyle={
        Object {
          "fontSize": 18,
        }
      }
    />
    <ForwardRef
      onPress={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderLeftWidth": 1,
            "height": 56,
            "justifyContent": "center",
            "width": 56,
          },
          Object {
            "borderLeftWidth": 0,
          },
        ]
      }
      testID="buttonShare"
    >
      <Icon
        color="#F9FAFB"
        name="download"
        size={24}
      />
    </ForwardRef>
  </Header>
  <Component
    contentContainerStyle={
      Object {
        "paddingBottom": 20,
        "paddingTop": 26,
      }
    }
    style={
      Object {
        "backgroundColor": "#1F2937",
      }
    }
  >
    <Component
      style={
        Object {
          "flex": 1,
          "width": "100%",
        }
      }
    >
      <Component
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 10,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <Title
          style={
            Array [
              Object {
                "marginRight": 6,
              },
              Object {
                "color": "#F9FAFB",
              },
            ]
          }
        >
          GET
        </Title>
        <Component
          style={
            Array [
              Object {
                "borderRadius": 4,
                "fontSize": 12,
                "height": 22,
                "justifyContent": "center",
                "width": 30,
              },
              Object {
                "backgroundColor": "#4D7C0F",
              },
            ]
          }
          testID="statusCodeColor"
        >
          <Text
            style={
              Array [
                Object {
                  "textAlign": "center",
                },
                Object {
                  "color": "#F9FAFB",
                },
              ]
            }
          >
            200
          </Text>
        </Component>
      </Component>
      <Component
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 10,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#6B7280",
            }
          }
        >
          Hostname : 
        </Text>
        <Text>
          run.mocky.io
        </Text>
      </Component>
      <Component
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 10,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#6B7280",
            }
          }
        >
          Started at : 
        </Text>
        <Text>
          16/02/2021 - 12:12:54   ( 1015ms )
        </Text>
      </Component>
      <Component
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 10,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#6B7280",
            }
          }
        >
          Timeout : 
        </Text>
        <Text>
          0
        </Text>
      </Component>
      <Subheading
        style={
          Array [
            Object {
              "marginBottom": 10,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            Object {
              "backgroundColor": "#374151",
              "color": "#F9FAFB",
            },
          ]
        }
      >
        Request Info
      </Subheading>
      <Component
        key="0"
        style={
          Object {
            "marginBottom": 10,
            "paddingHorizontal": 16,
          }
        }
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 10,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#6B7280",
                },
              ]
            }
          >
            url
          </Text>
          <ForwardRef
            onPress={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderLeftWidth": 0,
                  "flexDirection": "row",
                },
              ]
            }
            testID="buttonCopyToClipboard"
          >
            <Icon
              allowFontScaling={false}
              color="#06B6D4"
              name="clipboard-arrow-left-outline"
              size={14}
            />
            <Text
              style={
                Array [
                  Object {
                    "color": "#06B6D4",
                    "marginLeft": 6,
                  },
                ]
              }
            >
              Copy
            </Text>
          </ForwardRef>
        </Component>
        <Text
          style={
            Array [
              Object {
                "width": "100%",
              },
              Object {
                "color": "#F9FAFB",
              },
            ]
          }
        >
          https://run.mocky.io/v3/1a2d092a-42b2-4a89-a44f-267935dc13e9
        </Text>
      </Component>
      <Component
        key="1"
        style={
          Object {
            "marginBottom": 10,
            "paddingHorizontal": 16,
          }
        }
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 10,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#6B7280",
                },
              ]
            }
          >
            responseURL
          </Text>
        </Component>
        <Text
          style={
            Array [
              Object {
                "width": "100%",
              },
              Object {
                "color": "#F9FAFB",
              },
            ]
          }
        >
          https://run.mocky.io/v3/1a2d092a-42b2-4a89-a44f-267935dc13e9
        </Text>
      </Component>
      <Subheading
        style={
          Array [
            Object {
              "marginBottom": 10,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            Object {
              "backgroundColor": "#374151",
              "color": "#F9FAFB",
            },
          ]
        }
      >
        Request Headers
      </Subheading>
      <Component
        key="0"
        style={
          Object {
            "marginBottom": 10,
            "paddingHorizontal": 16,
          }
        }
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 10,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#6B7280",
                },
              ]
            }
          >
            Content-Type
          </Text>
        </Component>
        <Text
          style={
            Array [
              Object {
                "width": "100%",
              },
              Object {
                "color": "#F9FAFB",
              },
            ]
          }
        >
          application/json
        </Text>
      </Component>
      <Subheading
        style={
          Array [
            Object {
              "marginBottom": 10,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            Object {
              "backgroundColor": "#374151",
              "color": "#F9FAFB",
            },
          ]
        }
      >
        Request Data
      </Subheading>
      <Component
        style={
          Object {
            "justifyContent": "flex-start",
            "paddingHorizontal": 16,
            "paddingVertical": 8,
          }
        }
      >
        <Text>
          {"data":"This is a test with a long body, more than 100","next":"characters to check if the viewmore...
        </Text>
        <Component
          style={
            Object {
              "alignItems": "flex-end",
            }
          }
        >
          <ForwardRef
            onPress={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderLeftWidth": 0,
                  "flexDirection": "row",
                },
              ]
            }
            testID="buttonViewMore"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#06B6D4",
                    "marginRight": 6,
                  },
                ]
              }
            >
              View more
            </Text>
            <Icon
              allowFontScaling={false}
              color="#06B6D4"
              name="more"
              size={14}
              style={
                Object {
                  "transform": Array [
                    Object {
                      "rotateY": "180deg",
                    },
                  ],
                }
              }
            />
          </ForwardRef>
        </Component>
      </Component>
      <Subheading
        style={
          Array [
            Object {
              "marginBottom": 10,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            Object {
              "backgroundColor": "#374151",
              "color": "#F9FAFB",
            },
          ]
        }
      >
        Response Headers
      </Subheading>
      <Component
        key="0"
        style={
          Object {
            "marginBottom": 10,
            "paddingHorizontal": 16,
          }
        }
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 10,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#6B7280",
                },
              ]
            }
          >
            Content-Length
          </Text>
        </Component>
        <Text
          style={
            Array [
              Object {
                "width": "100%",
              },
              Object {
                "color": "#F9FAFB",
              },
            ]
          }
        >
          0
        </Text>
      </Component>
      <Component
        key="1"
        style={
          Object {
            "marginBottom": 10,
            "paddingHorizontal": 16,
          }
        }
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 10,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#6B7280",
                },
              ]
            }
          >
            Content-Type
          </Text>
        </Component>
        <Text
          style={
            Array [
              Object {
                "width": "100%",
              },
              Object {
                "color": "#F9FAFB",
              },
            ]
          }
        >
          application/json; charset=UTF-8
        </Text>
      </Component>
      <Component
        key="2"
        style={
          Object {
            "marginBottom": 10,
            "paddingHorizontal": 16,
          }
        }
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 10,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#6B7280",
                },
              ]
            }
          >
            Date
          </Text>
        </Component>
        <Text
          style={
            Array [
              Object {
                "width": "100%",
              },
              Object {
                "color": "#F9FAFB",
              },
            ]
          }
        >
          Tue, 16 Feb 2021 12:12:55 GMT
        </Text>
      </Component>
      <Component
        key="3"
        style={
          Object {
            "marginBottom": 10,
            "paddingHorizontal": 16,
          }
        }
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 10,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#6B7280",
                },
              ]
            }
          >
            Sozu-Id
          </Text>
        </Component>
        <Text
          style={
            Array [
              Object {
                "width": "100%",
              },
              Object {
                "color": "#F9FAFB",
              },
            ]
          }
        >
          51989c0c-ebe7-4574-913d-443477875da7
        </Text>
      </Component>
      <Subheading
        style={
          Array [
            Object {
              "marginBottom": 10,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            Object {
              "backgroundColor": "#374151",
              "color": "#F9FAFB",
            },
          ]
        }
      >
        Response Body
      </Subheading>
      <Component
        style={
          Object {
            "flexDirection": "row-reverse",
            "paddingHorizontal": 16,
          }
        }
      >
        <ForwardRef
          onPress={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderLeftWidth": 0,
                "flexDirection": "row",
              },
            ]
          }
          testID="buttonCopyToClipboard"
        >
          <Icon
            allowFontScaling={false}
            color="#06B6D4"
            name="clipboard-arrow-left-outline"
            size={14}
          />
          <Text
            style={
              Array [
                Object {
                  "color": "#06B6D4",
                  "marginLeft": 6,
                },
              ]
            }
          >
            Copy
          </Text>
        </ForwardRef>
      </Component>
      <Component
        style={
          Object {
            "justifyContent": "flex-start",
            "paddingHorizontal": 16,
            "paddingVertical": 8,
          }
        }
      >
        <Text>
          response
        </Text>
      </Component>
    </Component>
  </Component>
  <Snackbar
    duration={3000}
    onDismiss={[Function]}
    style={
      Object {
        "backgroundColor": "#F9FAFB",
      }
    }
    theme={
      Object {
        "colors": Object {
          "surface": "#6B7280",
        },
      }
    }
    visible={false}
  />
</Component>
`;

exports[`Details test suite Test Request item should render properly with request with headers 1`] = `
<Component
  style={
    Object {
      "height": "100%",
      "left": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
    }
  }
>
  <Header
    style={
      Array [
        Object {
          "elevation": 0,
          "shadowOffset": Object {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
        },
        Object {
          "backgroundColor": "#111827",
        },
      ]
    }
  >
    <ForwardRef
      onPress={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderLeftWidth": 1,
            "height": 56,
            "justifyContent": "center",
            "width": 56,
          },
          Object {
            "borderLeftWidth": 0,
          },
        ]
      }
      testID="buttonBackToMainScreen"
    >
      <Icon
        color="#F9FAFB"
        name="arrow-left"
        size={24}
      />
    </ForwardRef>
    <Content
      color="#06B6D4"
      title="Netwatch"
      titleStyle={
        Object {
          "fontSize": 18,
        }
      }
    />
    <ForwardRef
      onPress={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderLeftWidth": 1,
            "height": 56,
            "justifyContent": "center",
            "width": 56,
          },
          Object {
            "borderLeftWidth": 0,
          },
        ]
      }
      testID="buttonShare"
    >
      <Icon
        color="#F9FAFB"
        name="download"
        size={24}
      />
    </ForwardRef>
  </Header>
  <Component
    contentContainerStyle={
      Object {
        "paddingBottom": 20,
        "paddingTop": 26,
      }
    }
    style={
      Object {
        "backgroundColor": "#1F2937",
      }
    }
  >
    <Component
      style={
        Object {
          "flex": 1,
          "width": "100%",
        }
      }
    >
      <Component
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 10,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <Title
          style={
            Array [
              Object {
                "marginRight": 6,
              },
              Object {
                "color": "#F9FAFB",
              },
            ]
          }
        >
          GET
        </Title>
        <Component
          style={
            Array [
              Object {
                "borderRadius": 4,
                "fontSize": 12,
                "height": 22,
                "justifyContent": "center",
                "width": 30,
              },
              Object {
                "backgroundColor": "#D97706",
              },
            ]
          }
          testID="statusCodeColor"
        >
          <Text
            style={
              Array [
                Object {
                  "textAlign": "center",
                },
                Object {
                  "color": "#F9FAFB",
                },
              ]
            }
          >
            301
          </Text>
        </Component>
      </Component>
      <Component
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 10,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#6B7280",
            }
          }
        >
          Hostname : 
        </Text>
        <Text>
          run.mocky.io
        </Text>
      </Component>
      <Component
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 10,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#6B7280",
            }
          }
        >
          Started at : 
        </Text>
        <Text>
          16/02/2021 - 12:12:54   ( 1015ms )
        </Text>
      </Component>
      <Component
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 10,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#6B7280",
            }
          }
        >
          Timeout : 
        </Text>
        <Text>
          0
        </Text>
      </Component>
      <Subheading
        style={
          Array [
            Object {
              "marginBottom": 10,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            Object {
              "backgroundColor": "#374151",
              "color": "#F9FAFB",
            },
          ]
        }
      >
        Request Info
      </Subheading>
      <Component
        key="0"
        style={
          Object {
            "marginBottom": 10,
            "paddingHorizontal": 16,
          }
        }
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 10,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#6B7280",
                },
              ]
            }
          >
            url
          </Text>
          <ForwardRef
            onPress={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderLeftWidth": 0,
                  "flexDirection": "row",
                },
              ]
            }
            testID="buttonCopyToClipboard"
          >
            <Icon
              allowFontScaling={false}
              color="#06B6D4"
              name="clipboard-arrow-left-outline"
              size={14}
            />
            <Text
              style={
                Array [
                  Object {
                    "color": "#06B6D4",
                    "marginLeft": 6,
                  },
                ]
              }
            >
              Copy
            </Text>
          </ForwardRef>
        </Component>
        <Text
          style={
            Array [
              Object {
                "width": "100%",
              },
              Object {
                "color": "#F9FAFB",
              },
            ]
          }
        >
          https://run.mocky.io/v3/1a2d092a-42b2-4a89-a44f-267935dc13e9
        </Text>
      </Component>
      <Component
        key="1"
        style={
          Object {
            "marginBottom": 10,
            "paddingHorizontal": 16,
          }
        }
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 10,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#6B7280",
                },
              ]
            }
          >
            responseURL
          </Text>
        </Component>
        <Text
          style={
            Array [
              Object {
                "width": "100%",
              },
              Object {
                "color": "#F9FAFB",
              },
            ]
          }
        >
          https://run.mocky.io/v3/1a2d092a-42b2-4a89-a44f-267935dc13e9
        </Text>
      </Component>
      <Subheading
        style={
          Array [
            Object {
              "marginBottom": 10,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            Object {
              "backgroundColor": "#374151",
              "color": "#F9FAFB",
            },
          ]
        }
      >
        Request Data
      </Subheading>
      <Component
        style={
          Object {
            "justifyContent": "flex-start",
            "paddingHorizontal": 16,
            "paddingVertical": 8,
          }
        }
      >
        <Text>
          dataSent
        </Text>
      </Component>
      <Subheading
        style={
          Array [
            Object {
              "marginBottom": 10,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            Object {
              "backgroundColor": "#374151",
              "color": "#F9FAFB",
            },
          ]
        }
      >
        Response Body
      </Subheading>
      <Component
        style={
          Object {
            "flexDirection": "row-reverse",
            "paddingHorizontal": 16,
          }
        }
      >
        <ForwardRef
          onPress={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderLeftWidth": 0,
                "flexDirection": "row",
              },
            ]
          }
          testID="buttonCopyToClipboard"
        >
          <Icon
            allowFontScaling={false}
            color="#06B6D4"
            name="clipboard-arrow-left-outline"
            size={14}
          />
          <Text
            style={
              Array [
                Object {
                  "color": "#06B6D4",
                  "marginLeft": 6,
                },
              ]
            }
          >
            Copy
          </Text>
        </ForwardRef>
      </Component>
      <Component
        style={
          Object {
            "justifyContent": "flex-start",
            "paddingHorizontal": 16,
            "paddingVertical": 8,
          }
        }
      >
        <Text>
          response
        </Text>
      </Component>
    </Component>
  </Component>
  <Snackbar
    duration={3000}
    onDismiss={[Function]}
    style={
      Object {
        "backgroundColor": "#F9FAFB",
      }
    }
    theme={
      Object {
        "colors": Object {
          "surface": "#6B7280",
        },
      }
    }
    visible={false}
  />
</Component>
`;

exports[`Details test suite Test Request item should render properly with request with image 1`] = `
<Component
  style={
    Object {
      "height": "100%",
      "left": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
    }
  }
>
  <Header
    style={
      Array [
        Object {
          "elevation": 0,
          "shadowOffset": Object {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
        },
        Object {
          "backgroundColor": "#111827",
        },
      ]
    }
  >
    <ForwardRef
      onPress={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderLeftWidth": 1,
            "height": 56,
            "justifyContent": "center",
            "width": 56,
          },
          Object {
            "borderLeftWidth": 0,
          },
        ]
      }
      testID="buttonBackToMainScreen"
    >
      <Icon
        color="#F9FAFB"
        name="arrow-left"
        size={24}
      />
    </ForwardRef>
    <Content
      color="#06B6D4"
      title="Netwatch"
      titleStyle={
        Object {
          "fontSize": 18,
        }
      }
    />
    <ForwardRef
      onPress={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderLeftWidth": 1,
            "height": 56,
            "justifyContent": "center",
            "width": 56,
          },
          Object {
            "borderLeftWidth": 0,
          },
        ]
      }
      testID="buttonShare"
    >
      <Icon
        color="#F9FAFB"
        name="download"
        size={24}
      />
    </ForwardRef>
  </Header>
  <Component
    contentContainerStyle={
      Object {
        "paddingBottom": 20,
        "paddingTop": 26,
      }
    }
    style={
      Object {
        "backgroundColor": "#1F2937",
      }
    }
  >
    <Component
      style={
        Object {
          "flex": 1,
          "width": "100%",
        }
      }
    >
      <Component
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 10,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <Title
          style={
            Array [
              Object {
                "marginRight": 6,
              },
              Object {
                "color": "#F9FAFB",
              },
            ]
          }
        >
          GET
        </Title>
        <Component
          style={
            Array [
              Object {
                "borderRadius": 4,
                "fontSize": 12,
                "height": 22,
                "justifyContent": "center",
                "width": 30,
              },
              Object {
                "backgroundColor": "#4D7C0F",
              },
            ]
          }
          testID="statusCodeColor"
        >
          <Text
            style={
              Array [
                Object {
                  "textAlign": "center",
                },
                Object {
                  "color": "#F9FAFB",
                },
              ]
            }
          >
            200
          </Text>
        </Component>
      </Component>
      <Component
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 10,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#6B7280",
            }
          }
        >
          Hostname : 
        </Text>
        <Text>
          image
        </Text>
      </Component>
      <Component
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 10,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#6B7280",
            }
          }
        >
          Started at : 
        </Text>
        <Text>
          16/02/2021 - 12:12:54   ( 1015ms )
        </Text>
      </Component>
      <Component
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 10,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#6B7280",
            }
          }
        >
          Timeout : 
        </Text>
        <Text>
          0
        </Text>
      </Component>
      <Subheading
        style={
          Array [
            Object {
              "marginBottom": 10,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            Object {
              "backgroundColor": "#374151",
              "color": "#F9FAFB",
            },
          ]
        }
      >
        Request Info
      </Subheading>
      <Component
        key="0"
        style={
          Object {
            "marginBottom": 10,
            "paddingHorizontal": 16,
          }
        }
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "minHeight": 100,
            }
          }
        >
          <Component
            onError={[Function]}
            resizeMode="contain"
            source={
              Object {
                "uri": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAHElEQVQI12P4//8/w38GIAXDIBKE0DHxgljNBAAO9TXL0Y4OHwAAAABJRU5ErkJggg==",
              }
            }
            style={
              Object {
                "height": "100%",
                "width": "80%",
              }
            }
          />
        </Component>
      </Component>
      <Component
        key="1"
        style={
          Object {
            "marginBottom": 10,
            "paddingHorizontal": 16,
          }
        }
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "minHeight": 100,
            }
          }
        >
          <Component
            onError={[Function]}
            resizeMode="contain"
            source={
              Object {
                "uri": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAHElEQVQI12P4//8/w38GIAXDIBKE0DHxgljNBAAO9TXL0Y4OHwAAAABJRU5ErkJggg==",
              }
            }
            style={
              Object {
                "height": "100%",
                "width": "80%",
              }
            }
          />
        </Component>
      </Component>
      <Subheading
        style={
          Array [
            Object {
              "marginBottom": 10,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            Object {
              "backgroundColor": "#374151",
              "color": "#F9FAFB",
            },
          ]
        }
      >
        Request Data
      </Subheading>
      <Component
        style={
          Object {
            "justifyContent": "flex-start",
            "paddingHorizontal": 16,
            "paddingVertical": 8,
          }
        }
      >
        <Text>
          dataSent
        </Text>
      </Component>
      <Subheading
        style={
          Array [
            Object {
              "marginBottom": 10,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            Object {
              "backgroundColor": "#374151",
              "color": "#F9FAFB",
            },
          ]
        }
      >
        Response Body
      </Subheading>
      <Component
        style={
          Object {
            "flexDirection": "row-reverse",
            "paddingHorizontal": 16,
          }
        }
      >
        <ForwardRef
          onPress={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderLeftWidth": 0,
                "flexDirection": "row",
              },
            ]
          }
          testID="buttonCopyToClipboard"
        >
          <Icon
            allowFontScaling={false}
            color="#06B6D4"
            name="clipboard-arrow-left-outline"
            size={14}
          />
          <Text
            style={
              Array [
                Object {
                  "color": "#06B6D4",
                  "marginLeft": 6,
                },
              ]
            }
          >
            Copy
          </Text>
        </ForwardRef>
      </Component>
      <Component
        style={
          Object {
            "justifyContent": "flex-start",
            "paddingHorizontal": 16,
            "paddingVertical": 8,
          }
        }
      >
        <Text>
          response
        </Text>
      </Component>
    </Component>
  </Component>
  <Snackbar
    duration={3000}
    onDismiss={[Function]}
    style={
      Object {
        "backgroundColor": "#F9FAFB",
      }
    }
    theme={
      Object {
        "colors": Object {
          "surface": "#6B7280",
        },
      }
    }
    visible={false}
  />
</Component>
`;

exports[`Details test suite Test Request item should render properly with request with image 2`] = `
<Component
  style={
    Object {
      "height": "100%",
      "left": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
    }
  }
>
  <Header
    style={
      Array [
        Object {
          "elevation": 0,
          "shadowOffset": Object {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
        },
        Object {
          "backgroundColor": "#111827",
        },
      ]
    }
  >
    <ForwardRef
      onPress={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderLeftWidth": 1,
            "height": 56,
            "justifyContent": "center",
            "width": 56,
          },
          Object {
            "borderLeftWidth": 0,
          },
        ]
      }
      testID="buttonBackToMainScreen"
    >
      <Icon
        color="#F9FAFB"
        name="arrow-left"
        size={24}
      />
    </ForwardRef>
    <Content
      color="#06B6D4"
      title="Netwatch"
      titleStyle={
        Object {
          "fontSize": 18,
        }
      }
    />
    <ForwardRef
      onPress={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderLeftWidth": 1,
            "height": 56,
            "justifyContent": "center",
            "width": 56,
          },
          Object {
            "borderLeftWidth": 0,
          },
        ]
      }
      testID="buttonShare"
    >
      <Icon
        color="#F9FAFB"
        name="download"
        size={24}
      />
    </ForwardRef>
  </Header>
  <Component
    contentContainerStyle={
      Object {
        "paddingBottom": 20,
        "paddingTop": 26,
      }
    }
    style={
      Object {
        "backgroundColor": "#1F2937",
      }
    }
  >
    <Component
      style={
        Object {
          "flex": 1,
          "width": "100%",
        }
      }
    >
      <Component
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 10,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <Title
          style={
            Array [
              Object {
                "marginRight": 6,
              },
              Object {
                "color": "#F9FAFB",
              },
            ]
          }
        >
          GET
        </Title>
        <Component
          style={
            Array [
              Object {
                "borderRadius": 4,
                "fontSize": 12,
                "height": 22,
                "justifyContent": "center",
                "width": 30,
              },
              Object {
                "backgroundColor": "#4D7C0F",
              },
            ]
          }
          testID="statusCodeColor"
        >
          <Text
            style={
              Array [
                Object {
                  "textAlign": "center",
                },
                Object {
                  "color": "#F9FAFB",
                },
              ]
            }
          >
            200
          </Text>
        </Component>
      </Component>
      <Component
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 10,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#6B7280",
            }
          }
        >
          Hostname : 
        </Text>
        <Text>
          image
        </Text>
      </Component>
      <Component
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 10,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#6B7280",
            }
          }
        >
          Started at : 
        </Text>
        <Text>
          16/02/2021 - 12:12:54   ( 1015ms )
        </Text>
      </Component>
      <Component
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 10,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#6B7280",
            }
          }
        >
          Timeout : 
        </Text>
        <Text>
          0
        </Text>
      </Component>
      <Subheading
        style={
          Array [
            Object {
              "marginBottom": 10,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            Object {
              "backgroundColor": "#374151",
              "color": "#F9FAFB",
            },
          ]
        }
      >
        Request Info
      </Subheading>
      <Component
        key="0"
        style={
          Object {
            "marginBottom": 10,
            "paddingHorizontal": 16,
          }
        }
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "minHeight": 100,
            }
          }
        >
          <Component
            onError={[Function]}
            resizeMode="contain"
            source={
              Object {
                "uri": "data:image/png;-,",
              }
            }
            style={
              Object {
                "height": "100%",
                "width": "80%",
              }
            }
          />
        </Component>
      </Component>
      <Component
        key="1"
        style={
          Object {
            "marginBottom": 10,
            "paddingHorizontal": 16,
          }
        }
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "minHeight": 100,
            }
          }
        >
          <Component
            onError={[Function]}
            resizeMode="contain"
            source={
              Object {
                "uri": "data:image/png;base64,",
              }
            }
            style={
              Object {
                "height": "100%",
                "width": "80%",
              }
            }
          />
        </Component>
      </Component>
      <Subheading
        style={
          Array [
            Object {
              "marginBottom": 10,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            Object {
              "backgroundColor": "#374151",
              "color": "#F9FAFB",
            },
          ]
        }
      >
        Request Data
      </Subheading>
      <Component
        style={
          Object {
            "justifyContent": "flex-start",
            "paddingHorizontal": 16,
            "paddingVertical": 8,
          }
        }
      >
        <Text>
          dataSent
        </Text>
      </Component>
      <Subheading
        style={
          Array [
            Object {
              "marginBottom": 10,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            Object {
              "backgroundColor": "#374151",
              "color": "#F9FAFB",
            },
          ]
        }
      >
        Response Body
      </Subheading>
      <Component
        style={
          Object {
            "flexDirection": "row-reverse",
            "paddingHorizontal": 16,
          }
        }
      >
        <ForwardRef
          onPress={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderLeftWidth": 0,
                "flexDirection": "row",
              },
            ]
          }
          testID="buttonCopyToClipboard"
        >
          <Icon
            allowFontScaling={false}
            color="#06B6D4"
            name="clipboard-arrow-left-outline"
            size={14}
          />
          <Text
            style={
              Array [
                Object {
                  "color": "#06B6D4",
                  "marginLeft": 6,
                },
              ]
            }
          >
            Copy
          </Text>
        </ForwardRef>
      </Component>
      <Component
        style={
          Object {
            "justifyContent": "flex-start",
            "paddingHorizontal": 16,
            "paddingVertical": 8,
          }
        }
      >
        <Text>
          response
        </Text>
      </Component>
    </Component>
  </Component>
  <Snackbar
    duration={3000}
    onDismiss={[Function]}
    style={
      Object {
        "backgroundColor": "#F9FAFB",
      }
    }
    theme={
      Object {
        "colors": Object {
          "surface": "#6B7280",
        },
      }
    }
    visible={false}
  />
</Component>
`;

exports[`Details test suite Test Request item should render properly with request without headers & press backbutton 1`] = `
<Component
  style={
    Object {
      "height": "100%",
      "left": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
    }
  }
>
  <Header
    style={
      Array [
        Object {
          "elevation": 0,
          "shadowOffset": Object {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
        },
        Object {
          "backgroundColor": "#111827",
        },
      ]
    }
  >
    <ForwardRef
      onPress={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderLeftWidth": 1,
            "height": 56,
            "justifyContent": "center",
            "width": 56,
          },
          Object {
            "borderLeftWidth": 0,
          },
        ]
      }
      testID="buttonBackToMainScreen"
    >
      <Icon
        color="#F9FAFB"
        name="arrow-left"
        size={24}
      />
    </ForwardRef>
    <Content
      color="#06B6D4"
      title="Netwatch"
      titleStyle={
        Object {
          "fontSize": 18,
        }
      }
    />
    <ForwardRef
      onPress={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderLeftWidth": 1,
            "height": 56,
            "justifyContent": "center",
            "width": 56,
          },
          Object {
            "borderLeftWidth": 0,
          },
        ]
      }
      testID="buttonShare"
    >
      <Icon
        color="#F9FAFB"
        name="download"
        size={24}
      />
    </ForwardRef>
  </Header>
  <Component
    contentContainerStyle={
      Object {
        "paddingBottom": 20,
        "paddingTop": 26,
      }
    }
    style={
      Object {
        "backgroundColor": "#1F2937",
      }
    }
  >
    <Component
      style={
        Object {
          "flex": 1,
          "width": "100%",
        }
      }
    >
      <Component
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 10,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <Title
          style={
            Array [
              Object {
                "marginRight": 6,
              },
              Object {
                "color": "#F9FAFB",
              },
            ]
          }
        >
          GET
        </Title>
        <Component
          style={
            Array [
              Object {
                "borderRadius": 4,
                "fontSize": 12,
                "height": 22,
                "justifyContent": "center",
                "width": 30,
              },
              Object {
                "backgroundColor": "#B91C1C",
              },
            ]
          }
          testID="statusCodeColor"
        >
          <Text
            style={
              Array [
                Object {
                  "textAlign": "center",
                },
                Object {
                  "color": "#F9FAFB",
                },
              ]
            }
          >
            500
          </Text>
        </Component>
      </Component>
      <Component
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 10,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#6B7280",
            }
          }
        >
          Hostname : 
        </Text>
        <Text>
          run.mocky.io
        </Text>
      </Component>
      <Component
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 10,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#6B7280",
            }
          }
        >
          Started at : 
        </Text>
        <Text>
          16/02/2021 - 12:12:54   ( 1015ms )
        </Text>
      </Component>
      <Component
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 10,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#6B7280",
            }
          }
        >
          Timeout : 
        </Text>
        <Text>
          0
        </Text>
      </Component>
      <Subheading
        style={
          Array [
            Object {
              "marginBottom": 10,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            Object {
              "backgroundColor": "#374151",
              "color": "#F9FAFB",
            },
          ]
        }
      >
        Request Info
      </Subheading>
      <Component
        key="0"
        style={
          Object {
            "marginBottom": 10,
            "paddingHorizontal": 16,
          }
        }
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 10,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#6B7280",
                },
              ]
            }
          >
            url
          </Text>
          <ForwardRef
            onPress={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderLeftWidth": 0,
                  "flexDirection": "row",
                },
              ]
            }
            testID="buttonCopyToClipboard"
          >
            <Icon
              allowFontScaling={false}
              color="#06B6D4"
              name="clipboard-arrow-left-outline"
              size={14}
            />
            <Text
              style={
                Array [
                  Object {
                    "color": "#06B6D4",
                    "marginLeft": 6,
                  },
                ]
              }
            >
              Copy
            </Text>
          </ForwardRef>
        </Component>
        <Text
          style={
            Array [
              Object {
                "width": "100%",
              },
              Object {
                "color": "#F9FAFB",
              },
            ]
          }
        >
          https://run.mocky.io/v3/1a2d092a-42b2-4a89-a44f-267935dc13e9
        </Text>
      </Component>
      <Component
        key="1"
        style={
          Object {
            "marginBottom": 10,
            "paddingHorizontal": 16,
          }
        }
      >
        <Component
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 10,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#6B7280",
                },
              ]
            }
          >
            responseURL
          </Text>
        </Component>
        <Text
          style={
            Array [
              Object {
                "width": "100%",
              },
              Object {
                "color": "#F9FAFB",
              },
            ]
          }
        >
          https://run.mocky.io/v3/1a2d092a-42b2-4a89-a44f-267935dc13e9
        </Text>
      </Component>
      <Subheading
        style={
          Array [
            Object {
              "marginBottom": 10,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            Object {
              "backgroundColor": "#374151",
              "color": "#F9FAFB",
            },
          ]
        }
      >
        Request Data
      </Subheading>
      <Component
        style={
          Object {
            "justifyContent": "flex-start",
            "paddingHorizontal": 16,
            "paddingVertical": 8,
          }
        }
      >
        <Text>
          dataSent
        </Text>
      </Component>
      <Subheading
        style={
          Array [
            Object {
              "marginBottom": 10,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            Object {
              "backgroundColor": "#374151",
              "color": "#F9FAFB",
            },
          ]
        }
      >
        Response Body
      </Subheading>
      <Component
        style={
          Object {
            "flexDirection": "row-reverse",
            "paddingHorizontal": 16,
          }
        }
      >
        <ForwardRef
          onPress={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderLeftWidth": 0,
                "flexDirection": "row",
              },
            ]
          }
          testID="buttonCopyToClipboard"
        >
          <Icon
            allowFontScaling={false}
            color="#06B6D4"
            name="clipboard-arrow-left-outline"
            size={14}
          />
          <Text
            style={
              Array [
                Object {
                  "color": "#06B6D4",
                  "marginLeft": 6,
                },
              ]
            }
          >
            Copy
          </Text>
        </ForwardRef>
      </Component>
      <Component
        style={
          Object {
            "justifyContent": "flex-start",
            "paddingHorizontal": 16,
            "paddingVertical": 8,
          }
        }
      >
        <Text>
          response
        </Text>
      </Component>
    </Component>
  </Component>
  <Snackbar
    duration={3000}
    onDismiss={[Function]}
    style={
      Object {
        "backgroundColor": "#F9FAFB",
      }
    }
    theme={
      Object {
        "colors": Object {
          "surface": "#6B7280",
        },
      }
    }
    visible={false}
  />
</Component>
`;
